# jaek

./: README.md  jaek.cabal
src/: Jaek.hs
src/Jaek/: Base.hs  Gen.hs  IO.hs  Peaks.hs  Project.hs  Render.hs  SegmentOlaps.hs  StreamExpr.hs  StreamT.hs  Tree.hs  UI.hs
src/Jaek/Project/: Parse.hs  Serialize.hs
src/Jaek/Render/: Stream.hs  Tree.hs
src/Jaek/UI/: Actions.hs  AllSources.hs  ControlGraph.hs  Controllers.hs  Dialogs.hs  Focus.hs  FrpHandlers.hs  FrpHandlersCustom.hs  FrpTypes.hs  MenuActionHandlers.hs  Render.hs  Views.hs  WaveControl.hs
src/Jaek/UI/Controllers/: Base.hs  Clipboard.hs  Drags.hs  Edit1.hs  EditModes.hs  Nav.hs  Wave.hs
src/Jaek/UI/Input/: Actions.hs  Drags.hs
src/Jaek/UI/Logic/: SelectionMediators.hs
src/Jaek/UI/Render/: Overlays.hs
