Name:                jaek
Version:             0.1
Synopsis:            An experimental audio editor.
Description:         An experimental audio editor
Homepage:            http://www.tiresiaspress.us/haskell/jaek/
License:             GPL-3
License-file:        LICENSE
Author:              John W. Lato
Maintainer:          jwlato@gmail.com
Category:            Sound
Build-type:          Simple
Cabal-version:       >=1.2


Executable jaek
  main-is:             Jaek.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -rtsopts
  Build-depends:       base           >= 3       && < 5
                      ,cairo          >= 0.12    && < 0.13
                      ,containers     >= 0.3     && < 0.5
                      ,diagrams-core  >= 0.1     && < 0.2
                      ,diagrams-lib   >= 0.1     && < 0.2
                      ,directory      >= 1.0     && < 1.2
                      ,gtk            >= 0.12    && < 0.13
                      ,iteratee       >= 0.8.4.0 && < 0.9
                      ,monads-tf      >= 0.1     && < 0.2
                      ,transformers   >= 0.2     && < 0.3
                      ,uniplate       >= 1.6     && < 1.7
                      ,vector         >= 0.7     && < 0.8
                      ,diagrams-cairo             >= 0.1.3    && < 0.2
                      ,listlike-instances         >= 0.1      && < 1
                      ,MonadCatchIO-transformers  >= 0.2.2.2  && < 0.3
                      ,reactive-banana            >= 0.2.0.1  && < 0.3
                      ,sndfile-enumerators        >= 0.10     && < 0.11
  Other-modules:       Jaek.Base
                      ,Jaek.Gen
                      ,Jaek.IO
                      ,Jaek.Render.Tree
                      ,Jaek.StreamExpr
                      ,Jaek.StreamT
                      ,Jaek.Tree
                      ,Jaek.UI
                      ,Jaek.UI.Actions
                      ,Jaek.UI.Dialogs
                      ,Jaek.UI.FrpHandlers
                      ,Jaek.UI.MenuActionHandlers
  
