Name:                jaek
Version:             0.1
Synopsis:            An experimental audio editor.
Description:         An experimental audio editor
Homepage:            http://www.tiresiaspress.us/haskell/jaek/
License:             GPL-3
License-file:        LICENSE
Author:              John W. Lato
Maintainer:          jwlato@gmail.com
Category:            Sound
Build-type:          Simple
Cabal-version:       >=1.2

flag debug
  default: False

Executable jaek
  main-is:             Jaek.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-orphans
                       -rtsopts -threaded -O2 -with-rtsopts=-N
  if flag(debug)
    cpp-options:       -DDEBUG
  Build-depends:       base           >= 3       && < 5
                      ,attoparsec     >= 0.8.0   && < 0.10
                      ,blaze-builder  >= 0.3.0   && < 0.4
                      ,bytestring     >= 0.9.0   && < 0.11
                      ,cairo          >= 0.12    && < 0.13
                      ,colour         >= 2.3     && < 3.0
                      ,containers     >= 0.3     && < 0.5
                      ,data-default   >= 0.2     && < 0.4
                      ,diagrams-cairo >= 0.3.1   && < 0.5
                      ,diagrams-core  >= 0.3     && < 0.5
                      ,diagrams-lib   >= 0.3     && < 0.5
                      ,directory      >= 1.0     && < 1.2
                      ,filepath       >= 1.2     && < 1.3
                      ,fclabels       >= 1.0     && < 2.0
                      ,gtk            >= 0.12    && < 0.13
                      ,hashable       >= 1.1     && < 2.0
                      ,iteratee       >= 0.8.4.0 && < 0.9
                      ,murmurhash3    >= 1       && < 2
                      ,monads-tf      >= 0.1     && < 0.2
                      ,splaytree      >= 0.1     && < 0.3
                      ,stm            >= 2.2     && < 3.0
                      ,parallel       >= 2.1     && < 4.0
                      ,threads        >= 0.3     && < 0.5
                      ,transformers   >= 0.2     && < 0.3
                      ,tuple          >= 0.2     && < 0.4
                      ,uniplate       >= 1.6     && < 1.7
                      ,utf8-string    >= 0.3.0   && < 0.4
                      ,vector         >= 0.7     && < 0.10
                      ,vector-space   >= 0.7     && < 0.9
                      ,attoparsec-binary          >= 0.1.0    && < 0.2
                      ,attoparsec-iteratee        >= 0.3.0    && < 0.4
                      ,listlike-instances         >= 0.1      && < 1
                      ,MonadCatchIO-transformers  >= 0.2.2.2  && < 0.3
                      ,reactive-banana            >= 0.4      && < 0.5
                      ,sndfile-enumerators        >= 0.10     && < 0.11
                      ,unordered-containers       >= 0.1      && < 0.2
  Other-modules:       Jaek.Base
                      ,Jaek.Gen
                      ,Jaek.IO
                      ,Jaek.Peaks
                      ,Jaek.Project
                      ,Jaek.Project.Parse
                      ,Jaek.Project.Serialize
                      ,Jaek.Render
                      ,Jaek.Render.Stream
                      ,Jaek.Render.Tree
                      ,Jaek.SegmentOlaps
                      ,Jaek.StreamExpr
                      ,Jaek.StreamT
                      ,Jaek.Tree
                      ,Jaek.UI
                      ,Jaek.UI.Actions
                      ,Jaek.UI.AllSources
                      ,Jaek.UI.ControlGraph
                      ,Jaek.UI.Controllers.Base
                      ,Jaek.UI.Controllers.Clipboard
                      ,Jaek.UI.Controllers.Drags
                      ,Jaek.UI.Controllers.Edit1
                      ,Jaek.UI.Controllers.EditModes
                      ,Jaek.UI.Controllers.Nav
                      ,Jaek.UI.Controllers.Wave
                      ,Jaek.UI.Dialogs
                      ,Jaek.UI.FrpHandlers
                      ,Jaek.UI.FrpHandlersCustom
                      ,Jaek.UI.FrpTypes
                      ,Jaek.UI.Logic.SelectionMediators
                      ,Jaek.UI.MenuActionHandlers
                      ,Jaek.UI.Render
                      ,Jaek.UI.Render.Overlays
                      ,Jaek.UI.Views
